#6 - add panels for display & fixes CSS properties: 1) add 'flex-wrap' in footer of card in case footer has no place displaying all elements in one line 2) remove line of header in inbox & decrease top padding

--- a/FE/src/app/inbox/feature/inbox/inbox.component.css
+++ b/FE/src/app/inbox/feature/inbox/inbox.component.css
@@ -34,7 +34,6 @@
   align-items: center;
   gap: 12px;
   padding: 1px 16px;
-  border-bottom: 1px solid #f0f0f0;
   background: #f5f6f6;
   font-weight: 600;
   font-size: 14px;
@@ -82,7 +81,7 @@
 .body {
   flex: 1 1 auto;
   overflow: auto;
-  padding: 12px 16px;
+  padding: 1px 16px 12px 16px;
   font-size: 13px;
   color: #111827;
   line-height: 1.4;
